--- a/README.html
+++ b/README.html
@@ -9,8 +9,10 @@
 			gtag('js', new Date());
 			gtag('config', 'UA-148605332-1');
 		</script>
-		<title> Laura's Nail Polish Collection </title>
+		<title>Laura's Nail Polish Collection</title>
 	</head>
 	<body>
+		<h1>Hello World</h1>
+   		<p>This is a web page.</p>
 	</body>
 </html>
