--- a/README.html
+++ b/README.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">,
+<html lang="en">
 	<head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-148605332-1"></script>
