--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 			gtag('config', 'UA-148605332-1');
 		</script>
 		<title>Laura's Nail Polish Collection</title>
+		<link rel=stylesheet href='Style.css'>
 	</head>
 	<body>
-		<h1>Hello World</h1>
-   		<p>This is a web page.</p>
+		<h1>Laura's Nail Polish Collection</h1>
+   		<p>Welcome to Laura's Nail Polish Collection.</p>
 	</body>
 </html>
