--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<link rel=stylesheet href='Style.css'>
 	</head>
 	<body>
+		<div id="fb-root"></div>
+		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v4.0"></script>
+		<div class="fb-like" data-href="https://lauragonzalezmerino.github.io/index.html" data-width="15" data-layout="box_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
 		<h1>Laura's Nail Polish Collection</h1>
    		<p>Welcome to Laura's Nail Polish Collection.</p>
 	</body>
