--- a/index.html
+++ b/index.html
@@ -13,10 +13,52 @@
 		<link rel=stylesheet href='Style.css'>
 	</head>
 	<body>
+		
+		<a href="index.html"><h1>Laura's Nail Polish Collection</h1></a>
+   		<p>Welcome to Laura's Nail Polish Collection. A website for <a href="https://github.com/mikeizbicki/cmc-csci040">CS040</a> taught by <a href="https://izbicki.me""> Mike Izbicki</a>.</p>
+		
+		<div id=title>
+		</div>
+		<div class=menu>
+			<ul class=menu>
+			<a href="HW 1 page_2.html"><li class=menu>Reds</li></a>
+			<a href="HW 1 page_3.html"><li class=menu>Blues</li></a>
+			<a href="HW 1 page_4.html"><li class=menu>Pinks</li></a>
+			</ul>
+		</div>
+		<div class=contents>
+
+			<p><span class=harry>Harry Potter</span> is a fun fantasy movie/book series.</p>
+			<p>Harry Potter is a fun fantasy movie/book series.</p>
+			<p>Harry Potter is a fun fantasy movie/book series.</p>
+			<p>Harry Potter is a fun fantasy movie/book series.</p>
+
+			<a href="https://en.wikipedia.org/wiki/Harry_Potter">
+			<p>Characters:</p>
+				<ol>
+				<li>Harry Potter</li>
+				<li>Hermione Granger</li>
+				<li>Ron Weasley</li>
+				</ol>
+			</a>
+
+			<img width=400px alt='Harry Potter Image' src="https://upload.wikimedia.org/wikipedia/commons/8/81/The_Elephant_House.jpg" />
+			<table>
+			<tr>
+			<td>Character Name</td><td>Character House</td>
+			</tr>
+			<tr>
+			<td>Harry Potter</td><td>Griffindor</td>
+			</tr>
+			<tr>
+			<td>Hermione Granger</td><td>Griffindor</td>
+			</tr>
+			<table>
+		</div>
+
 		<div id="fb-root"></div>
 		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v4.0"></script>
 		<div class="fb-like" data-href="https://lauragonzalezmerino.github.io/index.html" data-width="15" data-layout="box_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
-		<h1>Laura's Nail Polish Collection</h1>
-   		<p>Welcome to Laura's Nail Polish Collection.</p>
+
 	</body>
 </html>
