Update and rename HW 1 page_2.html to page_2.html

--- a/page_2.html
+++ b/page_2.html
@@ -16,9 +16,9 @@
 		<a href="index.html"><h1>Laura's Nail Polish Collection</h1></a>
 		<div class=menu>
 			<ul class=menu>
-			<a href="HW 1 page_2.html"><li class=menu>Reds</li></a>
-			<a href="HW 1 page_3.html"><li class=menu>Blues</li></a>
-			<a href="HW 1 page_4.html"><li class=menu>Pinks</li></a>
+			<a href="page_2.html"><li class=menu>Reds</li></a>
+			<a href="page_3.html"><li class=menu>Blues</li></a>
+			<a href="page_4.html"><li class=menu>Pinks</li></a>
 			</ul>
 		</div>
 		<h2>Reds</h2>
