--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 		</div>
 		<div class=menu>
 			<ul class=menu>
-			<a href="HW 1 page_2.html"><li class=menu>Reds</li></a>
-			<a href="HW 1 page_3.html"><li class=menu>Blues</li></a>
-			<a href="HW 1 page_4.html"><li class=menu>Pinks</li></a>
+			<a href="page_2.html"><li class=menu>Reds</li></a>
+			<a href="page_3.html"><li class=menu>Blues</li></a>
+			<a href="page_4.html"><li class=menu>Pinks</li></a>
 			</ul>
 		</div>
 		<div class=contents>
