--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 		</script>
 		<title>Laura's Nail Polish Collection</title>
 		<link rel=stylesheet href='Style.css'>
+		<meta name="description" content= "Quick facts on Laura's nail polish collection"/>
 	</head>
 	<body>
-		
 		<a href="index.html"><h1>Laura's Nail Polish Collection</h1></a>
-   		<p>Welcome to Laura's Nail Polish Collection. A website for <a href="https://github.com/mikeizbicki/cmc-csci040">CS040</a> taught by <a href="https://izbicki.me""> Mike Izbicki</a>.</p>
+   		<p>Welcome to Laura's Nail Polish Collection. A website for <a href="https://github.com/mikeizbicki/cmc-csci040">CS040</a> taught by <a href="https://izbicki.me"> Mike Izbicki</a>.</p>
 		
-		<div id=title>
-		</div>
+
 		<div class=menu>
 			<ul class=menu>
 			<a href="page_2.html"><li class=menu>Reds</li></a>
@@ -26,34 +25,16 @@
 			<a href="page_4.html"><li class=menu>Pinks</li></a>
 			</ul>
 		</div>
-		<div class=contents>
+		
+			<img width="800" alt="Nail polish collection" src="https://i.ytimg.com/vi/N7hW3Z_zE_U/maxresdefault.jpg">
 
-			<p><span class=harry>Harry Potter</span> is a fun fantasy movie/book series.</p>
-			<p>Harry Potter is a fun fantasy movie/book series.</p>
-			<p>Harry Potter is a fun fantasy movie/book series.</p>
-			<p>Harry Potter is a fun fantasy movie/book series.</p>
+		<div class="explanation">
+			<p>This is a brief catalogue of my nail polish collection.</p>
+			<p>This collection has been building since <span class=count>2011</span>.</P>
+		</div>
 
-			<a href="https://en.wikipedia.org/wiki/Harry_Potter">
-			<p>Characters:</p>
-				<ol>
-				<li>Harry Potter</li>
-				<li>Hermione Granger</li>
-				<li>Ron Weasley</li>
-				</ol>
-			</a>
-
-			<img width=400px alt='Harry Potter Image' src="https://upload.wikimedia.org/wikipedia/commons/8/81/The_Elephant_House.jpg" />
-			<table>
-			<tr>
-			<td>Character Name</td><td>Character House</td>
-			</tr>
-			<tr>
-			<td>Harry Potter</td><td>Griffindor</td>
-			</tr>
-			<tr>
-			<td>Hermione Granger</td><td>Griffindor</td>
-			</tr>
-			<table>
+		<div class="acknowledgements">
+			<p>Thank you to my wonderful friends for gifting me a large portion of my collection</p>
 		</div>
 
 		<div id="fb-root"></div>
