--- a/index.html
+++ b/index.html
@@ -1,45 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-148605332-1"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'UA-148605332-1');
-		</script>
-		<title>Laura's Nail Polish Collection</title>
-		<link rel=stylesheet href='Style.css'>
-		<meta name="description" content= "Quick facts on Laura's nail polish collection"/>
+		<title>Interesting Statistics from LA and NYC!</title>
 	</head>
 	<body>
-		<a href="index.html"><h1>Laura's Nail Polish Collection</h1></a>
-   		<p>Welcome to Laura's Nail Polish Collection. A website for <a href="https://github.com/mikeizbicki/cmc-csci040">CS040</a> taught by <a href="https://izbicki.me"> Mike Izbicki</a>.</p>
-		
-
-		<div class=menu>
-			<ul class=menu>
-			<a href="page_2.html"><li class=menu>Reds</li></a>
-			<a href="page_3.html"><li class=menu>Blues</li></a>
-			<a href="page_4.html"><li class=menu>Pinks</li></a>
-			</ul>
-		</div>
-		
-			<img width="800" alt="Nail polish collection" src="https://i.ytimg.com/vi/N7hW3Z_zE_U/maxresdefault.jpg">
-
-		<div class="explanation">
-			<p>This is a brief catalogue of my nail polish collection.</p>
-			<p>This collection has been building since <span class=count>2011</span>.</P>
-		</div>
-
-		<div class="acknowledgements">
-			<p>Thank you to my wonderful friends for gifting me a large portion of my collection</p>
-		</div>
-
-		<div id="fb-root"></div>
-		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v4.0"></script>
-		<div class="fb-like" data-href="https://lauragonzalezmerino.github.io/index.html" data-width="15" data-layout="box_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
-
+	<h1> Interesting Statistics from LA and NYC! </h1>
+	<h2> Baby names </h2>
+		<img width="700" alt="Frequency of name Avery in NYC" src="Avery_baby_names_graph.png">
+		<p>The graph above showcases the popularity of the name Avery from 2011 until 2016 in New York City. The data was collected through civil birth registrations. </p>
+		<a href="https://catalog.data.gov/dataset/most-popular-baby-names-by-sex-and-mothers-ethnic-group-new-york-city-8c742">Data Source</a>
+	<h2> Job Applications </h2>
+		<img width="700" alt="Top 10  job applications in LA" src="Job_applicants_graph.png">
+		<p>The graph above shows the top 10 jobs that applicants in the city of Los Angeles applied to during fiscal year 2013-2014. This data was provided by the city in their Los Angeles Open Data database found at https://data.lacity.org/.</p>
+		<a href="https://catalog.data.gov/dataset/applicant-information-from-7-1-2014-to-9-30-2014-7835b"> Data Source </a>
+	<p> __________________________________________________ </p>
+	<a href="https://github.com/mikeizbicki/cmc-csci040/tree/master/hw_04"> A project for HW 4 in CS40 </a>
 	</body>
 </html>
